# ulysses

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  bloom.cpp  bloom.hpp  kmer.cpp  kmer.hpp  main.cpp  main.hpp  misc.hpp  seed.cpp  seed.hpp  speed.sh
include/ulysses/: bloom.hpp  kmer.hpp  misc.hpp  seed.hpp
lib/: CMakeLists.txt  bloom.cpp  kmer.cpp  seed.cpp
main/: main.cpp  main.hpp
tests/: .gitignore  2.fa  CMakeLists.txt  map_file.tab  tests.sh  tests_clean.sh  tests_run_cli.sh  tests_run_unittests.sh
tests/_data/: 1.fa  35268_notfound_left.fa.tmp  map_file2.tab  map_file3.tab  query.fa  query_large.fa
tests/cli/: 01_ulysses_create.sh  02_ulysses_bitwise.sh  03_ulysses_hamming.sh  04_ulysses_symmdiffmat.sh  05_ulysses_dump.sh  06_ulysses_shrink.sh  07_ulysses_query.sh  08_ulysses_stats.sh  09_ulysses_create_many.sh  10_query_and_split.sh  11_merge.sh
tests/unittests/: .gitignore  CMakeLists.txt  test.cpp  ulysses_tests.cpp
utils/: MurmurHash3.cpp
